# code-conductor

./: .flake8  .gitignore  .safety-project.ini  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_PROMPT.md  LICENSE  Makefile  README.md  SECURITY.md  SETUP_ENHANCEMENT_PLAN.md  SETUP_TECHNICAL_IMPLEMENTATION.md  UPGRADE.md  conductor  conductor-init.sh  install.sh  pyproject.toml  requirements.txt  setup.py  test-gh-auth-fix.sh  uninstall.py
.conductor/: GITHUB_TOKEN_SETUP.md  config.yaml  contracts.md  workflow-state.json
.conductor/conductor_setup/: __init__.py  cache_manager.py  config_manager.py  detector.py  discovery_task.py  github_integration.py  ui_manager.py
.conductor/roles/: CLAUDE.md  _core.md  code-reviewer.md  data.md  dev.md  devops.md  frontend.md  ml-engineer.md  mobile.md  security.md  ui-designer.md
.conductor/scripts/: CLAUDE.md  archive-completed.py  bootstrap.sh  check-duplicate-issues.py  cleanup-stale.py  cleanup-worktrees.py  code-reviewer.py  conductor  create-review-task.py  dependency-check.py  generate-summary.py  generate-tasks-from-map.py  health-check.py  issue-to-task.py  (+5 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
docs/: AGENT_WORKFLOW.md  AI_CODE_REVIEW.md  ARCHITECTURE.md  BEST_PRACTICES.md  CONFIGURATION.md  DEVELOPMENT.md  DUPLICATE_PREVENTION.md  EXAMPLES.md  FAQ.md  GITHUB_INTEGRATION.md  INSTALLATION.md  MONITORING.md  README.md  STACK_SUPPORT.md  STORAGE.md  TROUBLESHOOTING.md  UPGRADING.md  USAGE.md  worktree-helper.sh
tests/: __init__.py  test_basic.py  test_stack_detection.py  test_uninstall.py  test_workflow_generation.py
(+53 files in other folders)
